--- a/templates/agenda/event_detail.html
+++ b/templates/agenda/event_detail.html
@@ -165,7 +165,7 @@
 </div>
 {% endif %}
 
-{% if event.videos.all %}}
+{% if event.videos.all %}
 <h3 class="section__title">{% trans "Videos" %}</h3>
 <div class="row">
     {% for video in event.videos.all %}
@@ -180,6 +180,8 @@
 {% if event.allow_comments %}{% comments_for event %}{% endif %}
 {% endblock %}
 
+{% block ical %}
 <a href='{% icalendar_url %}' target="_blank" class="small push-ical">{% trans "Subscribe to all events in" %} Google Calendar/Outlook/iCal</a>
+{% endblock %}
 
 {% endblock %}
