--- a/festival/static/scss/modules/artist-card.scss
+++ b/festival/static/scss/modules/artist-card.scss
@@ -47,6 +47,7 @@
       width: 100%;
       padding: 0.5rem;
       text-align: center;
+      text-transform: uppercase;
       background: white;
       margin: 0;
       @media (min-width : $desktop ) {
