--- a/templates/index.html
+++ b/templates/index.html
@@ -24,37 +24,40 @@
 <div class="last__media">
     <h2 class="section__title">{% trans "Featured" %}</h2>
 
-    {% for post in featured.blogposts.all %}
-    <div class="last__media__entry">
-         {# <span>{% trans "Article" %}</span>#}
-         {% include 'blog/includes/post_card.html' %}
-         <a href="{% url 'blog_post_list' %}" class="btn btn-full">{% trans "All" %} {% trans "articles" %}</a>
-    </div>
-    {% endfor %}
+    <div class="msry__container">
+        <div class="msry__sizer"></div>
 
-    {% for artist in featured.artists.all %}
-    <div class="last__media__entry">
-         {# <span>{% trans "Artist" %}</span>#}
-         {% include "festival/inc/artist_card.html" %}
-         <a href="{% url 'festival-artist-list' %}" class="btn btn-full">{% trans "All" %} {% trans "artists" %}</a>
-    </div>
-    {% endfor %}
+        {% for post in featured.blogposts.all %}
+        <div class="last__media__entry  msry__item">
+             {# <span>{% trans "Article" %}</span>#}
+             {% include 'blog/includes/post_card.html' %}
+             <a href="{% url 'blog_post_list' %}" class="btn btn-full">{% trans "All" %} {% trans "articles" %}</a>
+        </div>
+        {% endfor %}
 
-    {% for video in featured.videos.all %}
-    <div class="last__media__entry">
-        {# <span>{% trans "Video" %}</span>#}
-        {% include 'festival/inc/video_card.html' %}
-        <a href="{% url 'festival-video-list' %}" class="btn btn-full">{% trans "All" context "fem" %} {% trans "videos" %}</a>
-    </div>
-    {% endfor %}
+        {% for artist in featured.artists.all %}
+        <div class="last__media__entry  msry__item">
+             {# <span>{% trans "Artist" %}</span>#}
+             {% include "festival/inc/artist_card.html" %}
+             <a href="{% url 'festival-artist-list' %}" class="btn btn-full">{% trans "All" %} {% trans "artists" %}</a>
+        </div>
+        {% endfor %}
 
-    {% for playlist in featured.playlists.all %}
-    <div class="last__media__entry">
-        {# <span>{% trans "Playlist" %}</span>#}
-        {% include 'festival/inc/audio_playlist.html' %}
-    </div>
-    {% endfor %}
+        {% for video in featured.videos.all %}
+        <div class="last__media__entry  msry__item">
+            {# <span>{% trans "Video" %}</span>#}
+            {% include 'festival/inc/video_card.html' %}
+            <a href="{% url 'festival-video-list' %}" class="btn btn-full">{% trans "All" context "fem" %} {% trans "videos" %}</a>
+        </div>
+        {% endfor %}
 
+        {% for playlist in featured.playlists.all %}
+        <div class="last__media__entry  msry__item">
+            {# <span>{% trans "Playlist" %}</span>#}
+            {% include 'festival/inc/audio_playlist.html' %}
+        </div>
+        {% endfor %}
+    </div>
 </div>
 
 
