--- a/app/festival/static/scss/base/_layout.scss
+++ b/app/festival/static/scss/base/_layout.scss
@@ -74,7 +74,7 @@
     @media (min-width : $tablet ) {
         float: left;
         width: 33.33333%;
-        padding: 1rem .25rem;
+        padding: 0 .5rem .5rem;
     }
   }
 
