--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -91,7 +91,7 @@
         <ul id="lightSlider">
             {% featured_events as events %}
             {% for event in events %}
-              <li class="hero__slider__item" style="background-image: url({{ event.featured_image_header.url }});">
+              <li class="hero__slider__item" style="background-image: url({{ MEDIA_URL }}{% thumbnail event.featured_image_header 1920 0 %});">
                   <div class="hero__slider__infos">
                     <div class="container">
                       <p class="hero__slider__name">
@@ -237,4 +237,3 @@
 
 </script>
 </html>
-    
