--- a/templates/blog/includes/post_card.html
+++ b/templates/blog/includes/post_card.html
@@ -1,8 +1,10 @@
+{% load i18n pages_tags mezzanine_tags %}
+
 <div class="artist__item {% if not on_home %}msry__item {% endif %}">
     <div class="artist__item__inner">
         <a href="{% url 'blog_post_detail' post.slug %}" class="artist__item__inner">
             <figure class="artist__item__img">
-                <img src="{{ post.featured_image.url }}" alt="Article: {{ post.title }}">
+                <img src="{{ MEDIA_URL }}{% thumbnail post.featured_image 500 0 %}" alt="Article: {{ post.title }}">
             </figure>
             <h3 class="artist__item__name">
                 <span>
