--- a/app/festival/static/scss/modules/event-card.scss
+++ b/app/festival/static/scss/modules/event-card.scss
@@ -2,20 +2,21 @@
   padding: 0.5rem;
   background: $white;
   margin-bottom: 1rem;
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.4);
   transition: .3s;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.4);
-  @extend .row;
+  display: block;
+  float: left;
+  width: 100%;
   &--alt {
     @extend .event__card;
     background: $main_color_alt;
     color: white;
   }
 
-  @media (min-width : $desktop ) {
-      float: left;
-      width: 31%;
-      margin: 0 .5rem 1rem .5rem;
+  @media (min-width : $tablet ) {
+      // float: left;
+      // width: 31%;
+      // margin: 0 .5rem 1rem .5rem;
       &:hover {
         box-shadow: 0px 1px 15px 0px rgba(0, 0, 0, 0.8);
         transform: scale(1.01);
