--- a/app/templates/includes/share_buttons.html
+++ b/app/templates/includes/share_buttons.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<ul class="share__links list-inline">
+<ul class="share__links">
     <li>
         <a class="share__link__item  share-facebook" target="_blank" href="http://facebook.com/sharer.php?u={{ request.build_absolute_uri }}&amp;t={{ object.title|urlencode }}"><i class="icon icon__facebook"></i> {% trans "Share on Facebook" %}</a>
     </li>
