--- a/festival/static/scss/modules/share-links.scss
+++ b/festival/static/scss/modules/share-links.scss
@@ -7,11 +7,25 @@
   // border-top: 1px solid darken($main_color, 25);
   // border-bottom: 1px solid darken($main_color, 25);
   list-style: none;
+  @media (min-width : $desktop ) {
+    display: block;
+    padding: 0;
+    li {
+        display: inline-block;
+        *display: inline;
+        *zoom: 1;
+        text-align: center;
+        vertical-align: middle;
+        padding: 0 ($base_font_size / 2);
+        margin-left: -0.33333em;
+    }
+  }
 }
 
 .share__link__item {
   text-transform: uppercase;
   margin-right: 1rem;
+  display: block;
   .icon {
     color: darken($main_color, 25);
     font-size: 1.1rem;
