--- a/app/templates/agenda/event_list.html
+++ b/app/templates/agenda/event_list.html
@@ -74,7 +74,7 @@
     </div>
 </div>
 
-<a href='{% icalendar_url %}' target="_blank" class="small  push-ical">{% trans "Subscribe to all events in" %} Google Calendar/Outlook/iCal</a>
+{# <a href='{% icalendar_url %}' target="_blank" class="small  push-ical">{% trans "Subscribe to all events in" %} Google Calendar/Outlook/iCal</a>#}
 
 {% pagination_for events %}
 
