--- a/templates/agenda/includes/event_metainfo.html
+++ b/templates/agenda/includes/event_metainfo.html
@@ -6,12 +6,15 @@
         {% if event.end|date == event.start|date and event.end.hour|subtract:event.start.hour > 3 %}{{ event.end|time:"TIME_FORMAT" }}{% endif %}
         {% if unit_booking %}
             &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-            {% for price in event.prices.all %}{{ price.value|floatformat:"-2" }} €{% if not forloop.last %} / {% endif %}{% endfor %}
             {% if event.prices.all.0|floatformat != '0' %}
+            {% for price in event.prices.all %}{{ price.value|floatformat:"-2" }} €{% if not forloop.last %} / {% endif %}{% endfor %}
             <a href="{% url 'event_booking' event.slug %}" class="event__meta__btn">
                 {% trans "Booking" %}
             </a>
+            {% else %}
+            {% trans "Free entry. Limited seats available" %}
             {% endif %}
+
         {% endif %}
         {% endif %}
         {% if event.location %}
