--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
 {# <h2 class="section__title">{% trans "Edito" %}</h2>#}
 
 {% featured_edito as edito %}
-{{ edito.content|safe|slice:":446" }}...
+{{ edito.content|safe|slice:":591" }}
 <br>
 <a href="{% url 'page' edito.slug %}" class="event__meta__btn">{% trans "Read the edito" %}</a>
 <br>
