--- a/templates/agenda/includes/event_location.html
+++ b/templates/agenda/includes/event_location.html
@@ -10,5 +10,7 @@
           {% google_static_map location 900 300 15 %}
       </a/><br />
         <a href="{{ location|google_nav_url }}" target="_blank" class="">{% trans "Click to get the interactive map" %}</a>
+        <br/>
+        <a class="btn" href="{% url "event_list_location" location.slug %}" class="sidebar__entry">{% trans "Viewing events for the location" %}</a>
         {% endblock %}
 </div>
