--- a/app/festival/static/scss/modules/event-card.scss
+++ b/app/festival/static/scss/modules/event-card.scss
@@ -14,8 +14,8 @@
   }
 
   @media (min-width : $tablet ) {
-      // float: left;
-      // width: 31%;
+      float: left;
+      width: 31%;
       // margin: 0 .5rem 1rem .5rem;
       &:hover {
         box-shadow: 0px 1px 15px 0px rgba(0, 0, 0, 0.8);
