--- a/app/festival/templates/festival/video_detail.html
+++ b/app/festival/templates/festival/video_detail.html
@@ -24,10 +24,13 @@
 {% endwith %}
 
 <div class="video-event">
-    <h2 class="section__title">{% trans 'Related event' %}</h2>
+ <h2 class="section__title">{% trans 'Also discover' %}</h2>
+  <div class="msry__container">
+   <div class="msry__sizer"></div>
     {% with video.event as event %}
     {% include 'agenda/includes/event_card.html' %}
     {% endwith %}
+</div>
 </div>
 
 {% endblock %}
