--- a/app/festival/static/scss/modules/pager.scss
+++ b/app/festival/static/scss/modules/pager.scss
@@ -4,13 +4,17 @@
 
 .pager {
   display: block;
-  margin: 0.5rem auto
+  margin: 0.5rem auto;
+  border-top: 1px solid #aaa;
+  border-bottom: 1px solid #aaa;
+  padding-left: 0;
 }
 
 .pager__item--before,
 .pager__item--after {
   display: block;
   text-transform: uppercase;
+  font-size: 0.75rem;
 }
 
 .formContent {
