--- a/templates/agenda/event_detail.html
+++ b/templates/agenda/event_detail.html
@@ -133,7 +133,7 @@
 
 {% block event_previous_next %}
 <ul class="split-container pager">
-    {% with event.get_previous_by_publish_date as previous %}
+    {% with event.get_previous_by_start_date as previous %}
         {% if previous %}
             <li class="split-left">
                 <a href="{{ previous.get_absolute_url }}" class="pager__item--before event__meta__btn">&larr; {% trans "Previous event" %}</a>
@@ -141,7 +141,7 @@
         {% endif %}
     {% endwith %}
 
-    {% with event.get_next_by_publish_date as next %}
+    {% with event.get_next_by_start_date as next %}
         {% if next %}
             <li class="split-right">
                 <a href="{{ next.get_absolute_url }}" class="pager__item--after event__meta__btn">{% trans "Next event" %} &rarr;</a>
