--- a/templates/blog/blog_post_detail.html
+++ b/templates/blog/blog_post_detail.html
@@ -80,6 +80,7 @@
 {% endif %}
 {% endblock %}
 
+{% comment %}
 {% block blog_post_detail_rating %}
 <div class="panel panel-default rating">
     <div class="panel-body">
@@ -87,11 +88,12 @@
     </div>
 </div>
 {% endblock %}
+{% endcomment %}
 
-{% block blog_post_detail_sharebuttons %}
-{% set_short_url_for blog_post %}
-<a class="btn btn-sm share-twitter" target="_blank" href="http://twitter.com/home?status={{ blog_post.short_url|urlencode }}%20{{ blog_post.title|urlencode }}">{% trans "Share on Twitter" %}</a>
-<a class="btn btn-sm share-facebook" target="_blank" href="http://facebook.com/sharer.php?u={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}">{% trans "Share on Facebook" %}</a>
+{% block event_detail_sharebuttons %}
+  {% with blog_post as object %}
+    {% include "includes/share_buttons.html" %}
+  {% endwith %}
 {% endblock %}
 
 {% block blog_post_previous_next %}
