update post card and list, update locale

--- a/app/templates/blog/includes/post_card.html
+++ b/app/templates/blog/includes/post_card.html
@@ -13,7 +13,7 @@
                     {{ post.title }}
                 </span>
             </h3>
-            <span class="artist__item__date">{{ post.publish_date|date:"DATE_FORMAT" }}</span>
+            <span class="artist__item__date">{% trans "published on" %} {{ post.publish_date|date:"DATE_FORMAT" }}</span>
         </a>
     </div>
 </div>
