--- a/app/templates/blog/blog_post_detail.html
+++ b/app/templates/blog/blog_post_detail.html
@@ -26,11 +26,7 @@
 {% block blog_post_detail_postedby %}
 {% editable blog_post.publish_date %}
 <h6 class="post-meta">
-    {% trans "Posted by" %}:
-    {% with blog_post.user as author %}
-    <a href="{% url "blog_post_list_author" author %}">{{ author.get_full_name|default:author.username }}</a>
-    {% endwith %}
-    {% blocktrans with sometime=blog_post.publish_date|timesince %}{{ sometime }} ago{% endblocktrans %}
+    {% trans "published on" %} {{ blog_post.publish_date|date:"DATE_FORMAT" }}
 </h6>
 {% endeditable %}
 {% endblock %}
