--- a/app/templates/blog/blog_post_detail.html
+++ b/app/templates/blog/blog_post_detail.html
@@ -46,11 +46,13 @@
 </p>
 {% endblock %}
 
+{% comment %}
 {% block blog_post_detail_featured_image %}
 {% if settings.BLOG_USE_FEATURED_IMAGE and blog_post.featured_image %}
 <p><img class="img-responsive" src="{{ MEDIA_URL }}{% thumbnail blog_post.featured_image 600 0 %}"></p>
 {% endif %}
 {% endblock %}
+{% endcomment %}
 
 {% if settings.COMMENTS_DISQUS_SHORTNAME %}
 {% include "generic/includes/disqus_counts.html" %}
