--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -132,7 +132,7 @@
                         <div class="media bk__news__inner">
                             <div class="media-img">
                                 <span class="bk__news__title">
-                                    {% trans "Dernière" %} <br> {% trans "minute" %} !
+                                    {% trans "Breaking" %} <br> {% trans "news" %} !
                                 </span>
                             </div>
                             <div class="media-content bk__news__content">
