add event program (brochure)

--- a/app/festival/static/scss/modules/icons.scss
+++ b/app/festival/static/scss/modules/icons.scss
@@ -60,7 +60,7 @@
 // .icon__file-o:before { content: $fa-var-file-o; }
 // .icon__clock-o:before { content: $fa-var-clock-o; }
 // .icon__road:before { content: $fa-var-road; }
-// .icon__download:before { content: $fa-var-download; }
+.icon__download:before { content: $fa-var-download; }
 // .icon__arrow-circle-o-down:before { content: $fa-var-arrow-circle-o-down; }
 // .icon__arrow-circle-o-up:before { content: $fa-var-arrow-circle-o-up; }
 // .icon__inbox:before { content: $fa-var-inbox; }
@@ -393,7 +393,7 @@
 // .icon__krw:before { content: $fa-var-krw; }
 // .icon__bitcoin:before,
 // .icon__btc:before { content: $fa-var-btc; }
-// .icon__file:before { content: $fa-var-file; }
+.icon__file:before { content: $fa-var-file; }
 // .icon__file-text:before { content: $fa-var-file-text; }
 // .icon__sort-alpha-asc:before { content: $fa-var-sort-alpha-asc; }
 // .icon__sort-alpha-desc:before { content: $fa-var-sort-alpha-desc; }
