--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -168,10 +168,10 @@
 
                 <div class="cta__panel">
                     <div>
-                        <a href="/media/uploads/doc/MANIFESTE-2016-AGENDA.pdf" class="btn btn-full btn-inverse">Télécharger le programme</a>
+                        <a href="/media/uploads/doc/MANIFESTE-2016-AGENDA.pdf" class="btn btn-full btn-inverse">{% trans "Download the brochure" %}</a>
                     </div>
                     <div>
-                        <a href="/newsletter/" class="btn btn-full btn-inverse">Inscription newsletter</a>
+                        <a href="/newsletter/" class="btn btn-full btn-inverse">{% trans "Subscribe to newsletter" %}</a>
                     </div>
                 </div>
 
