--- a/app/templates/agenda/includes/event_metainfo_slider.html
+++ b/app/templates/agenda/includes/event_metainfo_slider.html
@@ -21,7 +21,7 @@
             </div>
             <div class="split-right">
                 <a href="{{ event.get_absolute_url }}" class="btn">
-                    <i class="icon icon__bookmark"></i> {% trans "Booking" %}
+                    <i class="icon icon__bookmark"></i> {% trans "Reserve" %}
                 </a>
             </div>
         </div>
