--- a/app/templates/blog/blog_post_detail.html
+++ b/app/templates/blog/blog_post_detail.html
@@ -113,14 +113,26 @@
 </ul>
 {% endblock %}
 
+
 {% block blog_post_detail_related_posts %}
-{% if related_posts %}
+{% if related_posts or blog_post.events.all %}
 <div id="related-posts">
-<h3>{% trans 'Related posts' %}</h3>
+<h3>{% trans "Also discover" %}</h3>
  <div class="msry__container">
     <div class="msry__sizer"></div>
     {% for post in related_posts %}
         {% include 'blog/includes/post_card.html' %}
+    {% endfor %}
+    {% for event in blog_post.events.all %}
+        {% for artist in event.artists.all %}
+            {% include "festival/inc/artist_card.html" %}
+        {% endfor %}
+        {% for video in event.videos.all %}
+            {% include 'festival/inc/video_card.html' %}
+        {% endfor %}
+        {% for post in event.blog_posts.all %}
+            {% include 'blog/includes/post_card.html' %}
+        {% endfor %}
     {% endfor %}
  </div>
 </div>
